--- a/src/components/layout/Header/Header.module.sass
+++ b/src/components/layout/Header/Header.module.sass
@@ -7,3 +7,13 @@
   .container
     width: 80%
     margin: auto
+    display: flex
+    gap: 32px
+    align-items: center
+    
+    .link
+      color: $white
+      text-decoration: none
+      
+      &:hover
+        color: $alternative
