--- a/src/components/molecules/ArticlePreview/ArticlePreviewEvent/ArticlePreviewEvent.module.sass
+++ b/src/components/molecules/ArticlePreview/ArticlePreviewEvent/ArticlePreviewEvent.module.sass
@@ -26,3 +26,10 @@
     &:hover
       cursor: pointer
       background-color: $alternative
+      
+@media screen and (max-width: $sm)
+  .wrapper
+    flex-direction: column
+    
+  .event_button
+    margin-top: 12px
