--- a/src/styles/base/_vars.sass
+++ b/src/styles/base/_vars.sass
@@ -1,6 +1,12 @@
+// colors
 $primary: #f60
 $secondary: #ffd200
 $alternative: #B212A5
 
 $black: #11181c
 $white: #fbfcfd
+
+
+// breakpoint
+$sm: 680px
+$md: 1024px
