--- a/src/pages/articles/index.module.sass
+++ b/src/pages/articles/index.module.sass
@@ -1,6 +1,15 @@
+@import ../../styles/base/vars
+
 .wrapper
   display: grid
   grid-template-columns: repeat(3, 1fr)
   grid-row-gap: 50px
   grid-column-gap: 70px
   
+@media screen and (max-width: $md)
+  .wrapper
+    grid-template-columns: repeat(2, 1fr)
+
+@media screen and (max-width: $sm)
+  .wrapper
+    grid-template-columns: repeat(1, 1fr)
