--- a/src/components/layout/Main/Main.module.sass
+++ b/src/components/layout/Main/Main.module.sass
@@ -1,3 +1,15 @@
 .main
   max-width: 80%
   margin: auto
+  z-index: 1
+
+.background
+   background-color: #D9D9D933
+   position: absolute
+   height: 835px
+   width: 100%
+   top: 0
+   z-index: -1
+   border-bottom-left-radius: 50% 150px
+   border-bottom-right-radius: 50% 150px
+   
